# DSP-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
controls/: Counter.h  TrajectoryGenerator.h  TrajectoryGenerator.hpp  controlsLib.cpp  trajectoryTest.cpp
examples/: LowPassFilterExample.cpp  Makefile  MovingAverageFilter.cpp
src/: FIRFilter.h  FIRFilter.hpp  Filter.h  FilterUtility.h  FilterUtility.hpp  IIRFilter.h  IIRFilter.hpp
tests/: FIRIdealFilterSuite.cpp  FIRTestSuite.cpp  IIRTestSuite.cpp  KaiserWindowTest.ipynb  Makefile  testSuite.sh
tests/.ipynb_checkpoints/: KaiserWindowTest-checkpoint.ipynb
